Center images, add bottom margin to heading, fix margin on small button

--- a/css/main.css
+++ b/css/main.css
@@ -20,6 +20,13 @@ nav {
 
 img {
   width: 100px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+h2 {
+  margin-bottom: 0;
 }
 
 div {
@@ -54,7 +61,7 @@ div {
 
 .btn-small {
   padding: .875rem;
-  margin: 0 0 1.5rem;
+  margin: 0;
   background-color: #333;
   border-radius: 8px;
 }
